--- a/extension/popup.html
+++ b/extension/popup.html
@@ -3,11 +3,14 @@
 
 <head>
   <style>
+    input {
+      width: 200px;
+    }
   </style>
 </head>
 
 <body>
-  <p id="url"></p>
+  <input type="text">
   <script src="popup.js"></script>
 </body>
 
